updated the files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,46 @@
     <link rel="stylesheet" href="media.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <img src="images/logo.png" alt="">
+            <ul>
+                <li><a href="#">Homepage</a></li>
+                <li><a href="#">Pages</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Roadmap</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <button>Buy Token</button>
+        </nav>
+        <section>
+            <div class="content">
+                <h1>Buy and Sell <br>Digital Currency <br>Here.</h1>
+                <p>Cryptos is a trusted cryptocurrency company, where you can buy and sell cryptocurrencies at cheaper and affordable rates.</p>
+                <button>See Whitepaper</button>
+            </div>
+            <div class="img_data">
+                <img src="/images/Crypto Earth 1.png" alt="">
+            </div>
+        </section>
+    </header>
+
+    <aside>
+        <h1>What is ICO Cryptos</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse doloribus Desparacitado<br>nihil laudantium sit eaque laboriosam qui excepturi distinctio nisi gillum <br>voluptatum! tenetur suscipit aliquam pariatur totam alias sint!</p>
+        <img src="/images/grow line.png" alt="">
+        <div class="time">
+            <span id="day">30 <br> <h6>Days</h6></span>
+            <h5>:</h5>
+            <span id="day">30 <br> <h6>Hours</h6></span>
+            <h5>:</h5>
+            <span id="day">30 <br> <h6>Minutes</h6></span>
+            <h5>:</h5>
+            <span id="day">30 <br> <h6>Seconds</h6></span>
+        </div>
+        <button>Buy Token Now</button>
+    </aside>
 
     <script src="app.js"></script>
 </body>
