--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <button>Buy Token Now</button>
     </aside>
 
+    <div class="app">
+        <div class="app_img_bx"></div>
+        <div class="app_content_bx"></div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
