updated the files

--- a/index.html
+++ b/index.html
@@ -50,8 +50,20 @@
     </aside>
 
     <div class="app">
-        <div class="app_img_bx"></div>
-        <div class="app_content_bx"></div>
+        <div class="app_img_bx">
+            <img src="/images/Crypto App.png" alt="">
+        </div>
+        <div class="app_content_bx">
+            <h1>Awesome App Which Works For Your Business</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At cum voluptas provident. Maxime, quaerat, neque nulla dolor obcaecati voluptatibus veniam officiis recusandae, vero reprehenderit facere. Lorem ipsum dolor sit amet consectetur.</p>
+            <img src="/images/All Store.png" alt="">
+        </div>
+    </div>
+    <div class="converter">
+        <h1>Crypto Converter</h1>
+        <div class="cards">
+            
+        </div>
     </div>
 
     <script src="app.js"></script>
