updated the site

--- a/index.html
+++ b/index.html
@@ -132,7 +132,111 @@
         <h1>Crypto Road Map</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sint, eveniet repellendus quam repudiandae corrupti. Qui nisi ipsa optio odio?</p>
         <div class="map">
-            <div class="card"></div>
+            <div class="card">
+                <div class="title">
+                    <h6>25 APR 2022</h6>
+                    <h4>Stats Center Beta</h4>
+                </div>
+                <h5></h5>
+                <h2></h2>
+            </div>
+            <div class="card">
+                <div class="title">
+                    <h6>25 APR 2022</h6>
+                    <h4>Stats Center Beta</h4>
+                </div>
+                <h5></h5>
+                <h2></h2>
+            </div>
+            <div class="card">
+                <div class="title">
+                    <h6>25 APR 2022</h6>
+                    <h4>Stats Center Beta</h4>
+                </div>
+                <h5></h5>
+                <h2></h2>
+            </div>
+            <div class="card">
+                <div class="title">
+                    <h6>25 APR 2022</h6>
+                    <h4>Stats Center Beta</h4>
+                </div>
+                <h5></h5>
+                <h2></h2>
+            </div>
+            <div class="card">
+                <div class="title">
+                    <h6>25 APR 2022</h6>
+                    <h4>Stats Center Beta</h4>
+                </div>
+                <h5></h5>
+                <h2></h2>
+            </div>
+            <div class="card">
+                <div class="title">
+                    <h6>25 APR 2022</h6>
+                    <h4>Stats Center Beta</h4>
+                </div>
+                <h5></h5>
+                <h2></h2>
+            </div>
+            <div class="card">
+                <div class="title">
+                    <h6>25 APR 2022</h6>
+                    <h4>Stats Center Beta</h4>
+                </div>
+                <h5></h5>
+                <h2></h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="man">
+        <div class="man_img">
+            <img src="/images/Crypto Man.png" alt="">
+        </div>
+        <div class="man_content">
+            <h1>Review From Our Clients About Cryotis ICO</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi ipsa sequi similique, doloribus provident odio. Reiciendis sapiente delectus corporis! Optio, ullam reprehenderit? Culpa suscipit rerum, tempora doloribus recusandae ipsum officia.</p>
+            <div class="client_cole">
+                <div class="cont">
+                    <div class="star">
+                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                    </div>
+                    <h4>Stella Alina</h4>
+                    <p>Trader</p>
+                </div>
+                <div class="img">
+                    <img src="images/user.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="news">
+        <h1>Crypto Latest News</h1>
+        <div class="cards">
+            <div class="card">
+                <h6>BITCOIN</h6>
+                <h2>Crypto Really(Really) Wants a Bitcoin ETF</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, obcaecati debitis! Alias eius, dolor nostrum quis dolorem aut itaque maxime neque quos voluptatum. Libero, deserunt! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+                <h5>AUG, 23 2022</h5>
+            </div>
+            <div class="card">
+                <h6>CRYPTO</h6>
+                <h2>Crypto Stock Exchange Operator Pleads</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, obcaecati debitis! Alias eius, dolor nostrum quis dolorem aut itaque maxime neque quos voluptatum. Libero, deserunt! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+                <h5>SEP, 23 2022</h5>
+            </div>
+            <div class="card">
+                <h6>BLOCKCHAIN</h6>
+                <h2>Dont Let the Crypto Circus Fool You!</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex, obcaecati debitis! Alias eius, dolor nostrum quis dolorem aut itaque maxime neque quos voluptatum. Libero, deserunt! Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</p>
+                <h5>DEC, 23 2022</h5>
+            </div>
+        </div>
+        <div class="btn">
+            <button>Read More</button>
         </div>
     </div>
 
