updated the site

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Esse doloribus Desparacitado<br>nihil laudantium sit eaque laboriosam qui excepturi distinctio nisi gillum <br>voluptatum! tenetur suscipit aliquam pariatur totam alias sint!</p>
         <img src="/images/grow line.png" alt="">
         <div class="time">
-            <span id="day">30 <br> <h6>Days</h6></span>
+            <!-- <span id="day">30 <br> <h6>Days</h6></span>
             <h5>:</h5>
             <span id="day">30 <br> <h6>Hours</h6></span>
             <h5>:</h5>
             <span id="day">30 <br> <h6>Minutes</h6></span>
             <h5>:</h5>
-            <span id="day">30 <br> <h6>Seconds</h6></span>
+            <span id="day">30 <br> <h6>Seconds</h6></span> -->
         </div>
         <button>Buy Token Now</button>
     </aside>
