--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Cryptocurrency Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media.css">
     <!-- CSS for bootstraps icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -102,7 +101,7 @@
                 </div>
                 <div class="enter_bitcoin">
                     <input type="text" value="1997.45" id="gov">
-                    <h6 id="gov-coin">USD</h6>
+                    <h6 id="gov_coinss">USD</h6>
                 </div>
                 <p>Rate expressed in Government Currency</p>
             </div>
